--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -24,15 +24,18 @@ compatible = "zmk,combos";
     key-positions = <KEYPOS>; \
   };
 
-#define ALPHA_ALL HDN ARAQ HDNW
-#define ALPHA_MAC HDN
-#define ALPHA_WIN ARAQ HDNW
+#define ALPHA_ALL HDN HDNW HDNR HDNWR
+#define ALPHA_MAC HDN HDNR
+#define ALPHA_WIN HDNW HDNWR
 #define ALPHA_NO_QWERTY HDN HDNW
 
 /* Missing Alphas */
 COMBO(Q, &kp Q, 21 22, ALPHA_NO_QWERTY) // Q 
 COMBO(Z, &kp Z, 1 2, ALPHA_NO_QWERTY) // Z
 COMBO(V, &kp V, 20 21, ALPHA_NO_QWERTY) // V
+COMBO(Q, &kp Q, 23 24, HDNR HDNWR) // Q 
+COMBO(Z, &kp Z, 7 8, HDNR HDNWR) // Z
+COMBO(V, &kp V, 24 25, HDNR HDNWR) // V
 COMBO(slash, &kp SLASH, 24 25, ALPHA_ALL) // slash and ظ
 COMBO(taaa, &kp SQT, 18 19, ARAQ) // ط
 COMBO(geem, &kp LBKT, 7 8, ARAQ) // ج
