--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -36,7 +36,8 @@ COMBO(V, &kp V, 20 21, ALPHA_NO_QWERTY) // V
 COMBO(Q, &kp Q, 23 24, HDNR HDNWR) // Q 
 COMBO(Z, &kp Z, 7 8, HDNR HDNWR) // Z
 COMBO(V, &kp V, 24 25, HDNR HDNWR) // V
-COMBO(slash, &kp SLASH, 24 25, ALPHA_ALL) // slash and ظ
+COMBO(slash, &kp SLASH, 20 21, HDNR HDNWR) // slash on mirrord Hands Down
+COMBO(slash, &kp SLASH, 24 25, ALPHA_NO_QWERTY) // slash and ظ
 COMBO(taaa, &kp SQT, 18 19, ARAQ) // ط
 COMBO(geem, &kp LBKT, 7 8, ARAQ) // ج
 COMBO(daal, &kp RBKT, 8 9, ARAQ) // د
