--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -36,7 +36,7 @@ COMBO(V, &kp V, 20 21, ALPHA_NO_QWERTY) // V
 COMBO(QR, &kp Q, 23 24, HDNR HDNWR) // Q 
 COMBO(ZR, &kp Z, 7 8, HDNR HDNWR) // Z
 COMBO(VR, &kp V, 24 25, HDNR HDNWR) // V
-COMBO(slash, &kp SLASH, 20 21, HDNR HDNWR) // slash on mirrord Hands Down
+COMBO(slashR, &kp SLASH, 20 21, HDNR HDNWR) // slash on mirrord Hands Down
 COMBO(slash, &kp SLASH, 24 25, ALPHA_NO_QWERTY) // slash and ظ
 COMBO(taaa, &kp SQT, 18 19, ARAQ) // ط
 COMBO(geem, &kp LBKT, 7 8, ARAQ) // ج
