--- a/build.yaml
+++ b/build.yaml
@@ -31,3 +31,7 @@ include:
     shield: berylline_left
   - board: nice_nano_v2
     shield: berylline_right
+  - board: nice_nano_v2
+    shield: battootamin_left
+  - board: nice_nano_v2
+    shield: battootamin_right
