--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -77,3 +77,5 @@ COMBO(bt_3, &bt BT_SEL 3, 3 4, NAV NAVW)
 /* mac | win */
 GCOMBO(switch_to_HDN_mac, &to HDN, 0 10 26)
 GCOMBO(switch_to_HDN_win, &to HDNW, 9 19 29)
+GCOMBO(switch_to_APT_mac, &to HDN, 1 11 26)
+GCOMBO(switch_to_APT_win, &to HDNW, 8 18 29)
