--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -15,6 +15,7 @@ compatible = "zmk,combos";
     timeout-ms = <20>; \
     key-positions = <KEYPOS>; \
     layers = <LAYERS>; \
+    global-quick-tap-ms = <100>; \
   };
 
 #define ALPHA_ALL HDN ARAQ HDNW
