--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -32,7 +32,7 @@ compatible = "zmk,combos";
 COMBO(Q, &kp Q, 21 22, ALPHA_ALL) // Q 
 COMBO(Z, &kp Z, 1 2, ALPHA_ALL) // Z
 COMBO(V, &kp V, 20 21, ALPHA_ALL) // V
-COMBO(slash, &kp SLASH, 24 25, ALPHA_ALL) // slash
+// COMBO(slash, &kp SLASH, 24 25, ALPHA_ALL) // slash
 COMBO(dot, &kp DOT, 12 13, SYM SYMW) // . for sym
 COMBO(comma, &kp COMMA, 11 12, SYM SYMW) // , for sym
 
