--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -15,6 +15,7 @@ compatible = "zmk,combos";
     timeout-ms = <30>; \
     key-positions = <KEYPOS>; \
     layers = <LAYERS>; \
+    global-quick-tap-ms = <100>; \
   };
 
 #define GCOMBO(NAME, BINDINGS, KEYPOS) \
@@ -32,7 +33,7 @@ compatible = "zmk,combos";
 COMBO(Q, &kp Q, 21 22, ALPHA_ALL) // Q 
 COMBO(Z, &kp Z, 1 2, ALPHA_ALL) // Z
 COMBO(V, &kp V, 20 21, ALPHA_ALL) // V
-// COMBO(slash, &kp SLASH, 24 25, ALPHA_ALL) // slash
+COMBO(slash, &kp SLASH, 24 25, ALPHA_ALL) // slash
 COMBO(dot, &kp DOT, 12 13, SYM SYMW) // . for sym
 COMBO(comma, &kp COMMA, 11 12, SYM SYMW) // , for sym
 
@@ -65,8 +66,8 @@ COMBO(key_repeat_r, &key_repeat, 15 23, ALPHA_ALL)
 COMBO(key_repeat_l, &key_repeat, 14 22, ALPHA_ALL)
 COMBO(up, &kp UP, 20 21, NAV NAVW)
 COMBO(down, &kp DOWN, 21 22, NAV NAVW)
-COMBO(swapper, &swapper, 2 3, ALPHA_MAC)
-COMBO(swapperw, &swapperw, 2 3, ALPHA_WIN)
+COMBO(swapper, &swapper, 2 3, HDN APT NAV)
+COMBO(swapperw, &swapperw, 2 3, HDNW APTW NAV)
 
 /* bluetooth */
 COMBO(bt_clear, &bt BT_CLR, 0 14, NAV NAVW)
