--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -66,6 +66,8 @@ COMBO(key_repeat_r, &key_repeat, 15 23, ALPHA_ALL)
 COMBO(key_repeat_l, &key_repeat, 14 22, ALPHA_ALL)
 COMBO(up, &kp UP, 20 21, NAV NAVW)
 COMBO(down, &kp DOWN, 21 22, NAV NAVW)
+COMBO(swapper, &swapper, 2 3, ALPHA_MAC)
+COMBO(swapperw, &swapperw, 2 3, ALPHA_WIN)
 
 /* bluetooth */
 COMBO(bt_clear, &bt BT_CLR, 0 14, NAV NAVW)
