remove all aptex

--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -79,5 +79,5 @@ GCOMBO(switch_to_HDN_mac, &to HDN, 0 10 26)
 GCOMBO(switch_to_HDN_win, &to HDNW, 9 19 29)
 GCOMBO(switch_to_APT_mac, &to APT, 1 11 26)
 GCOMBO(switch_to_APT_win, &to APTW, 8 18 29)
-GCOMBO(switch_to_APTEX_mac, &to APTEX, 11 20 26)
-GCOMBO(switch_to_APTEX_win, &to APTEXW, 18 25 29)
+GCOMBO(switch_to_APTEX_mac, &to ATHUMB, 11 20 26)
+GCOMBO(switch_to_APTEX_win, &to ATHUMBW, 18 25 29)
