introduce alaa fork and leader key

--- a/config/west.yml
+++ b/config/west.yml
@@ -24,7 +24,7 @@ manifest:
       # remote: caksoylar
       # revision: caksoylar/experimental
       remote: alaasaadabdo
-      revision: alaasaadabdo/alaa
+      revision: alaa
       import: app/west.yml
   self:
     path: config
