--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -84,4 +84,6 @@ GCOMBO(switch_to_APT_win, &to APTW, 8 18 29)
 GCOMBO(switch_to_ATHUMB_mac, &to ATHUMB, 11 20 26)
 GCOMBO(switch_to_ATHUMB_win, &to ATHUMBW, 18 25 29)
 GCOMBO(switch_to_ARACNA_mac, &to ARACNA, 0 1 2)
-GCOMBO(switch_to_ARACNA_win, &to ARACNAW, 7 8 9)
+GCOMBO(switch_to_ARACNAW_win, &to ARACNAW, 7 8 9)
+GCOMBO(switch_to_ARACNAPT_mac, &to ARACNAPT, 2 3 4)
+GCOMBO(switch_to_ARACNAPTW_win, &to ARACNAPTW, 5 6 7)
