immediate home row mods

--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -25,9 +25,9 @@ compatible = "zmk,combos";
     key-positions = <KEYPOS>; \
   };
 
-#define ALPHA_ALL HDN HDNW APT APTW ATHUMB ATHUMBW ARACNA ARACNAW
-#define ALPHA_NO_THUMB HDN HDNW APT APTW ARACNA ARACNAW
-#define ALPHA_MAC HDN APT ATHUMB ARACNA
+#define ALPHA_ALL HDN HDNR HDNW APT APTW ATHUMB ATHUMBW ARACNA ARACNAW
+#define ALPHA_NO_THUMB HDN HDNR HDNW APT APTW ARACNA ARACNAW
+#define ALPHA_MAC HDN HDNR APT ATHUMB ARACNA
 #define ALPHA_WIN HDNW APTW ATHUMBW ARACNAW
 
 /* Missing Alphas */
@@ -87,3 +87,4 @@ GCOMBO(switch_to_ARACNA_mac, &to ARACNA, 0 1 2)
 GCOMBO(switch_to_ARACNAW_win, &to ARACNAW, 7 8 9)
 GCOMBO(switch_to_ARACNAPT_mac, &to ARACNAPT, 2 3 4)
 GCOMBO(switch_to_ARACNAPTW_win, &to ARACNAPTW, 5 6 7)
+GCOMBO(switch_to_HDNR_mac, &to HDNR, 1 2 3 4)
