--- a/config/combos32-3thumb.dtsi
+++ b/config/combos32-3thumb.dtsi
@@ -77,8 +77,8 @@ COMBO(bt_2, &bt BT_SEL 2, 2 3, NAV NAVW)
 COMBO(bt_3, &bt BT_SEL 3, 3 4, NAV NAVW)
   
 /* mac | win */
-// GCOMBO(switch_to_HDN_mac, &to HDN, 0 10 26)
-// GCOMBO(switch_to_HDN_win, &to HDNW, 9 19 31)
+GCOMBO(switch_to_HDN_mac, &to HDN, 0 10 26)
+GCOMBO(switch_to_HDN_win, &to HDNW, 9 19 31)
 // GCOMBO(switch_to_APT_mac, &to APT, 1 11 26)
 // GCOMBO(switch_to_APT_win, &to APTW, 8 18 31)
 // GCOMBO(switch_to_ATHUMB_mac, &to ATHUMB, 11 20 26)
