fix 3 thumbs combos

--- a/config/combos32-3thumb.dtsi
+++ b/config/combos32-3thumb.dtsi
@@ -34,8 +34,8 @@ compatible = "zmk,combos";
 COMBO(Q, &kp Q, 21 22, ALPHA_ALL) // Q 
 COMBO(Z, &kp Z, 1 2, ALPHA_NO_THUMB) // Z
 COMBO(V, &kp V, 20 21, ALPHA_NO_THUMB) // V
-COMBO(Zt, &kp Z, 20 21, ATHUMB ATHUMBW) // Z
-COMBO(X, &kp X, 7 8, ARACNA ARACNAW) // x
+// COMBO(Zt, &kp Z, 20 21, ATHUMB ATHUMBW) // Z
+// COMBO(X, &kp X, 7 8, ARACNA ARACNAW) // x
 
 /* Brackets */
 COMBO(left_bracket, &kp LBKT, 1 11, ALPHA_ALL)
