change themb to combo

--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -76,8 +76,8 @@ COMBO(bt_3, &bt BT_SEL 3, 3 4, NAV NAVW)
 /* mac | win */
 GCOMBO(switch_to_HDN_mac, &to HDN, 0 10 26)
 GCOMBO(switch_to_HDN_win, &to HDNW, 9 19 29)
+GCOMBO(switch_to_HDNR_mac, &to HDNR, 1 2 3 4)
 GCOMBO(switch_to_APT_mac, &to APT, 1 11 26)
 GCOMBO(switch_to_APT_win, &to APTW, 8 18 29)
 GCOMBO(switch_to_ATHUMB_mac, &to ATHUMB, 11 20 26)
-GCOMBO(switch_to_HDNR_mac, &to HDNR, 1 2 3 4)
-GCOMBO(switch_to_ATHUMB_win, &to ATHUMBW, 15 18 29)
+GCOMBO(switch_to_ATHUMB_win, &to ATHUMBW, 6 7 8 9)
