thumb alphas on 3  thumbs

--- a/config/combos32-3thumb.dtsi
+++ b/config/combos32-3thumb.dtsi
@@ -79,12 +79,8 @@ COMBO(bt_3, &bt BT_SEL 3, 3 4, NAV NAVW)
 /* mac | win */
 GCOMBO(switch_to_HDN_mac, &to HDN, 0 10 26)
 GCOMBO(switch_to_HDN_win, &to HDNW, 9 19 31)
-// GCOMBO(switch_to_APT_mac, &to APT, 1 11 26)
-// GCOMBO(switch_to_APT_win, &to APTW, 8 18 31)
-// GCOMBO(switch_to_ATHUMB_mac, &to ATHUMB, 11 20 26)
-// GCOMBO(switch_to_ATHUMB_win, &to ATHUMBW, 18 25 31)
-// GCOMBO(switch_to_ARACNA_mac, &to ARACNA, 0 1 2)
-// GCOMBO(switch_to_ARACNAW_win, &to ARACNAW, 7 8 9)
-// GCOMBO(switch_to_ARACNAPT_mac, &to ARACNAPT, 2 3 4)
-// GCOMBO(switch_to_ARACNAPTW_win, &to ARACNAPTW, 5 6 7)
+GCOMBO(switch_to_HDT_mac, &to HDT, 1 11 26)
+GCOMBO(switch_to_HDT_win, &to HDTW, 8 18 31)
+GCOMBO(switch_to_ATHUMB_mac, &to ATHUMB, 11 20 26)
+GCOMBO(switch_to_ATHUMB_win, &to ATHUMBW, 18 25 31)
 // GCOMBO(switch_to_HDNR_mac, &to HDNR, 1 2 3 4)
