--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -24,9 +24,9 @@ compatible = "zmk,combos";
     key-positions = <KEYPOS>; \
   };
 
-#define ALPHA_ALL HDN HDNR HDNW APT APTW ATHUMB ATHUMBW 
-#define ALPHA_MAC HDN HDNR APT ATHUMB 
-#define ALPHA_WIN HDNW APTW ATHUMBW
+#define ALPHA_ALL HDN HDNW
+#define ALPHA_MAC HDN
+#define ALPHA_WIN HDNW
 
 /* Missing Alphas */
 COMBO(Q, &kp Q, 21 22, ALPHA_ALL) // Q 
@@ -42,28 +42,32 @@ COMBO(left_brace, &kp LBRC, 3 13, ALPHA_ALL)
 COMBO(right_brace, &kp RBRC, 6 16, ALPHA_ALL)
 
 /* Text */
+COMBO(caps_word, &caps_word, 27 28, ALPHA_ALL)
+
+  /* Mac */
 COMBO(redo, &kp LG(LS(Z)), 3 4, ALPHA_MAC)
 COMBO(undo, &kp LG(Z), 13 14, ALPHA_MAC)
+COMBO(delete_word, &kp LA(BACKSPACE), 2 12, NAV)
+
+  /* Win */
 COMBO(redow, &kp LC(Y), 3 4, ALPHA_WIN)
 COMBO(undow, &kp LC(Z), 13 14, ALPHA_WIN)
-COMBO(caps_word, &caps_word, 27 28, ALPHA_ALL)
-COMBO(delete_word_l, &kp LA(BACKSPACE), 2 12, NAV)
-COMBO(delete_wordw_l, &kp LC(BACKSPACE), 2 12, NAVW)
+COMBO(delete_wordw, &kp LC(BACKSPACE), 2 12, NAVW)
 
 /* misc */
-COMBO(clipboard_manager, &kp LG(LC(LA(LS(Z)))), 20 21 22, ALPHA_ALL)
-COMBO(launcher, &kp LG(SPACE), 20 22, ALPHA_ALL)
 COMBO(esc, &kp ESC, 22 26, ALPHA_ALL)
-COMBO(lock_screen, &kp LG(LC(Q)), 6 7 8, NAV)
-COMBO(lock_screenw, &kp LG(L), 6 7 8, NAVW)
-COMBO(sym1h, &macro_sym, 26 27, ALPHA_MAC)
-COMBO(sym1hw, &macro_symW, 26 27, ALPHA_WIN)
+COMBO(launcher, &kp LG(SPACE), 20 22, ALPHA_ALL)
+COMBO(clipboard_manager, &kp LG(LC(LA(LS(Z)))), 20 21 22, ALPHA_ALL)
 COMBO(key_repeat_r, &key_repeat, 15 23, ALPHA_ALL)
 COMBO(key_repeat_l, &key_repeat, 14 22, ALPHA_ALL)
-COMBO(up, &kp UP, 20 21, NAV NAVW)
-COMBO(down, &kp DOWN, 21 22, NAV NAVW)
-COMBO(swapper, &swapper, 1 3, ALPHA_MAC)
-COMBO(swapperw, &swapperw, 1 3, ALPHA_WIN)
+
+  /* Mac */
+COMBO(lock_screen, &kp LG(LC(Q)), 6 7 8, NAV)
+COMBO(sym1h, &macro_sym, 26 27, ALPHA_MAC)
+
+  /* Win */
+COMBO(lock_screenw, &kp LG(L), 6 7 8, NAVW)
+COMBO(sym1hw, &macro_symW, 26 27, ALPHA_WIN)
 
 /* bluetooth */
 COMBO(bt_clear, &bt BT_CLR, 0 14, NAV NAVW)
@@ -75,8 +79,3 @@ COMBO(bt_3, &bt BT_SEL 3, 3 4, NAV NAVW)
 /* mac | win */
 GCOMBO(switch_to_HDN_mac, &to HDN, 0 10 26)
 GCOMBO(switch_to_HDN_win, &to HDNW, 9 19 29)
-GCOMBO(switch_to_HDNR_mac, &to HDNR, 1 2 3 4)
-GCOMBO(switch_to_APT_mac, &to APT, 1 11 26)
-GCOMBO(switch_to_APT_win, &to APTW, 8 18 29)
-GCOMBO(switch_to_ATHUMB_mac, &to ATHUMB, 11 20 26)
-GCOMBO(switch_to_ATHUMB_win, &to ATHUMBW, 6 7 8 9)
