--- a/config/west.yml
+++ b/config/west.yml
@@ -1,30 +1,30 @@
-# manifest:
-#   remotes:
-#     - name: zmkfirmware
-#       url-base: https://github.com/zmkfirmware
-#   projects:
-#     - name: zmk
-#       remote: zmkfirmware
-#       revision: main
-#       import: app/west.yml
-#   self:
-#     path: config
 manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: caksoylar
-      url-base: https://github.com/caksoylar
-    - name: alaasaadabdo
-      url-base: https://github.com/alaasaadabdo
   projects:
     - name: zmk
-      # remote: zmkfirmware
-      # revision: main
-      # remote: caksoylar
-      # revision: caksoylar/experimental
-      remote: alaasaadabdo
-      revision: alaa
+      remote: zmkfirmware
+      revision: main
       import: app/west.yml
   self:
     path: config
+# manifest:
+#   remotes:
+#     - name: zmkfirmware
+#       url-base: https://github.com/zmkfirmware
+#     - name: caksoylar
+#       url-base: https://github.com/caksoylar
+#     - name: alaasaadabdo
+#       url-base: https://github.com/alaasaadabdo
+#   projects:
+#     - name: zmk
+#       # remote: zmkfirmware
+#       # revision: main
+#       # remote: caksoylar
+#       # revision: caksoylar/experimental
+#       remote: alaasaadabdo
+#       revision: alaa
+#       import: app/west.yml
+#   self:
+#     path: config
