--- a/build.yaml
+++ b/build.yaml
@@ -23,3 +23,7 @@ include:
     shield: wizzav2_left
   - board: nice_nano_v2
     shield: wizzav2_right
+  - board: seeeduino_xiao_ble
+    shield: keywell_left
+  - board: seeeduino_xiao_ble
+    shield: keywell_right
