--- a/config/boards/shields/keywell/keywell.dtsi
+++ b/config/boards/shields/keywell/keywell.dtsi
@@ -28,12 +28,12 @@
     kscan0: kscan_0 {
         compatible = "zmk,kscan-gpio-matrix";
         label = "KSCAN";
-        diode-direction = "row2col";
+        diode-direction = "col2row";
 
-        row-gpios = 
-              <&xiao_d 9  GPIO_ACTIVE_HIGH>
-            , <&xiao_d 8  GPIO_ACTIVE_HIGH>
-            , <&xiao_d 7  GPIO_ACTIVE_HIGH>
+        row-gpios 
+            = <&xiao_d 9  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&xiao_d 8  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&xiao_d 7  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             ;
     };
 
