--- a/config/boards/shields/keywell/keywell.dtsi
+++ b/config/boards/shields/keywell/keywell.dtsi
@@ -14,7 +14,7 @@
 	};
 
 	default_transform: keymap_transform_0 {
-		compatible = "zmk,matrix_transform";
+		compatible = "zmk,matrix-transform";
 		columns = <10>;
 		rows = <3>;
 		map = <
