--- a/build.yaml
+++ b/build.yaml
@@ -20,10 +20,10 @@ include:
   - board: nice_nano_v2
     shield: wizza_right
   - board: nice_nano_v2
-    shield: wizzav2_left
+    shield: wizzades_left
   - board: nice_nano_v2
-    shield: wizzav2_right
-  - board: seeeduino_xiao_ble
-    shield: keywell_left
-  - board: seeeduino_xiao_ble
-    shield: keywell_right
+    shield: wizzades_right
+  # - board: seeeduino_xiao_ble
+  #   shield: keywell_left
+  # - board: seeeduino_xiao_ble
+  #   shield: keywell_right
