--- a/config/boards/shields/rommana/rommana_left.conf
+++ b/config/boards/shields/rommana/rommana_left.conf
@@ -2,7 +2,7 @@
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # enable deep sleep support
-CONFIG_ZMK_SLEEP=y
+# CONFIG_ZMK_SLEEP=y
 
 # "Eager Debouncing"
 # Trying to lower the input lag.
@@ -13,7 +13,7 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 # uses very little power, but it may take
 # a few seconds to reconnect after waking.
 # 1.800.000 ms = 30 minutes
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # Better compatibility with iPadOS
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
