--- a/config/boards/shields/asfoora/combos30.dtsi
+++ b/config/boards/shields/asfoora/combos30.dtsi
@@ -24,9 +24,9 @@ compatible = "zmk,combos";
     key-positions = <KEYPOS>; \
   };
 
-#define ALPHA_ALL HDN HDNW
-#define ALPHA_MAC HDN
-#define ALPHA_WIN HDNW
+#define ALPHA_ALL HDN HDNW APT APTW
+#define ALPHA_MAC HDN APT
+#define ALPHA_WIN HDNW APTW
 
 /* Missing Alphas */
 COMBO(Q, &kp Q, 21 22, ALPHA_ALL) // Q 
