--- a/build.yaml
+++ b/build.yaml
@@ -33,3 +33,7 @@ include:
     shield: rommana_left
   - board: seeeduino_xiao_ble
     shield: rommana_right
+    shield: basbousa_left
+  - board: nice_nano_v2
+    shield: basbousa_right
+  - board: nice_nano_v2
