--- a/config/combos34.dtsi
+++ b/config/combos34.dtsi
@@ -17,18 +17,10 @@ compatible = "zmk,combos";
     layers = <LAYERS>; \
   };
 
-#define ALPHA_ALL HDN ARAQ HDNW
+#define ALPHA_ALL HDN HDNW
 #define ALPHA_MAC HDN
-#define ALPHA_WIN ARAQ HDNW
+#define ALPHA_WIN HDNW
 #define ALPHA_NO_QWERTY HDN HDNW
-
-/* Missing alpha */
-COMBO(taaa, &kp SQT, 17 18, ARAQ) // ط
-COMBO(geem, &kp LBKT, 5 6, ARAQ) // ج
-COMBO(daal, &kp RBKT, 6 7, ARAQ) // د
-COMBO(zthal, &kp GRAVE, 0 1, ARAQ) // ذ
-COMBO(dot, &kp DOT, 11 12, SYM SYMW) // . for sym
-COMBO(comma, &kp COMMA, 10 11, SYM SYMW) // , for sym
 
 /* Brackets */
 COMBO(left_bracket, &kp LBKT, 0 10, ALPHA_ALL)
@@ -50,8 +42,6 @@ COMBO(key_repeat_r, &key_repeat, 25 26, ALPHA_ALL)
 COMBO(alfred, &kp LG(SPACE), 21 23, ALPHA_ALL)
 COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 21 22 23, ALPHA_ALL)
 COMBO(esc, &kp ESC, 23 30, ALPHA_ALL) 
-COMBO(up, &kp UP, 22 23, NAV NAVW)
-COMBO(down, &kp DOWN, 21 22, NAV NAVW)
 
 COMBO(sym1h, &macro_sym, 30 31, ALPHA_MAC)
 COMBO(sym1hw, &macro_symW, 30 31, ALPHA_WIN)
