rommana rows only active high

--- a/config/boards/shields/rommana/rommana.dtsi
+++ b/config/boards/shields/rommana/rommana.dtsi
@@ -31,9 +31,9 @@
         diode-direction = "col2row";
 
         row-gpios
-            = <&xiao_d 9  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&xiao_d 8  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&xiao_d 7  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            = <&xiao_d 9  GPIO_ACTIVE_HIGH>
+            , <&xiao_d 8  GPIO_ACTIVE_HIGH>
+            , <&xiao_d 7  GPIO_ACTIVE_HIGH>
             ;
     };
 
