--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -49,6 +49,7 @@ COMBO(caps_word, &caps_word, 27 28, ALPHA_ALL)
 COMBO(redo, &kp LG(LS(Z)), 3 4, ALPHA_MAC)
 COMBO(undo, &kp LG(Z), 13 14, ALPHA_MAC)
 COMBO(delete_word, &kp LA(BACKSPACE), 2 12, NAV)
+COMBO(raycast, &kp LC(LA(SPACE)), 20 26, ALPHA_ALL)
 
   /* Win */
 COMBO(redow, &kp LC(Y), 3 4, ALPHA_WIN)
