--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -60,8 +60,8 @@ COMBO(delete_wordw, &kp LC(BACKSPACE), 2 12, NAVW)
 
 /* misc */
 COMBO(esc, &kp ESC, 22 26, ALPHA_ALL)
-COMBO(launcher, &kp LG(SPACE), 20 22, ALPHA_ALL)
-COMBO(clipboard_manager, &kp LG(LC(LA(LS(Z)))), 20 21 22, ALPHA_ALL)
+COMBO(launcher, &kp LC(SPACE), 20 22, ALPHA_ALL)
+COMBO(clipboard_manager, &kp LC(LA(LS(Z))), 20 21 22, ALPHA_ALL)
 COMBO(key_repeat_r, &key_repeat, 15 23, ALPHA_ALL)
 COMBO(key_repeat_l, &key_repeat, 14 22, ALPHA_ALL)
 
