--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -49,6 +49,8 @@ COMBO(caps_word, &caps_word, 27 28, ALPHA_ALL)
   /* Mac */
 COMBO(redo, &kp LG(LS(Z)), 3 4, ALPHA_MAC)
 COMBO(undo, &kp LG(Z), 13 14, ALPHA_MAC)
+COMBO(mission_control, &kp LA(UP), 6 7 8, ALPHA_MAC)
+COMBO(app_windows, &kp LA(DOWN), 23 24 25, ALPHA_MAC)
 COMBO(delete_word, &kp LA(BACKSPACE), 2 12, NAV)
 COMBO(raycast, &kp LC(LA(SPACE)), 20 26, ALPHA_ALL)
 COMBO(rayclip, &kp LC(LA(LG(LS(J)))), 21 26, ALPHA_ALL)
@@ -60,8 +62,8 @@ COMBO(delete_wordw, &kp LC(BACKSPACE), 2 12, NAVW)
 
 /* misc */
 COMBO(esc, &kp ESC, 22 26, ALPHA_ALL)
-COMBO(launcher, &kp LC(SPACE), 20 22, ALPHA_ALL)
-COMBO(clipboard_manager, &kp LC(LA(LS(Z))), 20 21 22, ALPHA_ALL)
+COMBO(launcher, &kp LG(SPACE), 20 22, ALPHA_ALL)
+COMBO(clipboard_manager, &kp LG(LC(LA(LS(Z)))), 20 21 22, ALPHA_ALL)
 COMBO(key_repeat_r, &key_repeat, 15 23, ALPHA_ALL)
 COMBO(key_repeat_l, &key_repeat, 14 22, ALPHA_ALL)
 
