--- a/config/boards/shields/asfoora/asfoora.conf
+++ b/config/boards/shields/asfoora/asfoora.conf
@@ -5,7 +5,7 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # enable deep sleep support
-# CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=y
 
 # "Eager Debouncing"
 # Trying to lower the input lag.
