--- a/build.yaml
+++ b/build.yaml
@@ -29,6 +29,8 @@ include:
     shield: wizzades_right
   - board: nice_nano_v2
     shield: asfoora
+  - board: nice_nano_v2
+    shield: wasfoora
   - board: seeeduino_xiao_ble
     shield: rommana_left rgbled_widget
   - board: seeeduino_xiao_ble
