--- a/config/boards/shields/berylline/berylline.dtsi
+++ b/config/boards/shields/berylline/berylline.dtsi
@@ -10,6 +10,7 @@
 	chosen {
 		zmk,kscan = &kscan_faceup;
 		zmk,matrix_transform = &default_transform;
+		wakeup-source;
 	};
 
 	default_transform: keymap_transform_0 {
