--- a/config/boards/shields/wizza/wizza.dtsi
+++ b/config/boards/shields/wizza/wizza.dtsi
@@ -11,6 +11,7 @@
 	chosen {
 		zmk,kscan = &kscan_facedown;
 		zmk,matrix_transform = &default_transform;
+		wakeup-source;
 	};
 
 	default_transform: keymap_transform_0 {
