add wakeup-source in under kscan

--- a/config/boards/shields/rommana/rommana.dtsi
+++ b/config/boards/shields/rommana/rommana.dtsi
@@ -30,6 +30,7 @@
         compatible = "zmk,kscan-gpio-matrix";
         label = "KSCAN";
         diode-direction = "col2row";
+		wakeup-source;
     };
 
 };
