--- a/config/boards/shields/wizzades/wizzades.dtsi
+++ b/config/boards/shields/wizzades/wizzades.dtsi
@@ -29,10 +29,12 @@
 	/omit-if-no-ref/ kscan_faceup: kscan_0 {
 		compatible = "zmk,kscan-gpio-direct";
 		label = "KSCAN0";
+		wakeup-source;
 	};
 
 	/omit-if-no-ref/ kscan_facedown: kscan_1 {
 		compatible = "zmk,kscan-gpio-direct";
 		label = "KSCAN1";
+		wakeup-source;
 	};
 };
