--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -89,3 +89,7 @@ GCOMBO(switch_to_HDN_win, &to HDNW, 9 19 29)
 
 GCOMBO(switch_to_APT_mac, &to APT, 1 11 26)
 GCOMBO(switch_to_APT_win, &to APTW, 8 18 29)
+
+/* bluetooth profile + default layer */
+COMBO(btblhdn,  btblwin, 20 21, NAV NAVW)
+COMBO(btblhdnw, btblmac, 21 22, NAV NAVW)
