Adjust 5 way switch volume control and bluetooth profile combos

--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -91,5 +91,5 @@ GCOMBO(switch_to_APT_mac, &to APT, 1 11 26)
 GCOMBO(switch_to_APT_win, &to APTW, 8 18 29)
 
 /* bluetooth profile + default layer */
-COMBO(btblhdn,  &macro_btblwin, 20 21, NAV NAVW)
-COMBO(btblhdnw, &macro_btblmac, 21 22, NAV NAVW)
+COMBO(btblhdn,  &macro_btblwin, 27 20 21, ALPHA_ALL)
+COMBO(btblhdnw, &macro_btblmac, 27 21 22, ALPHA_ALL)
