--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -79,9 +79,9 @@ COMBO(sym1hw, &macro_symW, 26 27, ALPHA_WIN)
 COMBO(nav1hw, &macro_navW, 28 29, ALPHA_WIN)
 
 /* Volume */
-COMBO(volup, C_VOL_UP, 13 22, ALPHA_ALL)
-COMBO(voldown, C_VOL_DN, 12 21, ALPHA_WIN)
-COMBO(volmute, C_MUTE, 11 20, ALPHA_WIN)
+COMBO(volup, &kp C_VOL_UP, 13 22, ALPHA_ALL)
+COMBO(voldown, &kp C_VOL_DN, 12 21, ALPHA_WIN)
+COMBO(volmute, &kp C_MUTE, 11 20, ALPHA_WIN)
 
 /* bluetooth */
 COMBO(bt_clear, &bt BT_CLR, 0 14, NAV NAVW)
