--- a/config/west.yml
+++ b/config/west.yml
@@ -14,6 +14,13 @@ manifest:
     - name: chiptuner-zmk-module
       remote: petejohanson
       revision: main
+    - name: zmk-fingerpunch-vik 
+      remote: sadekbaroudi
+      revision: main
+    - name: zmk-fingerpunch-vik
+      remote: sadekbaroudi
+      revision: main
+      import: config/deps.yml
     # replace the one above with the commented one below when it gets merged into zmk
     # must swap the zmk-fingerpunch-keyboards repo as well at the same time
     # - name: zmk
