--- a/config/boards/shields/batreeq/batreeq.conf
+++ b/config/boards/shields/batreeq/batreeq.conf
@@ -24,3 +24,7 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
 # zmk mouse emulation
 CONFIG_ZMK_MOUSE=y
+
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
