--- a/build.yaml
+++ b/build.yaml
@@ -31,8 +31,10 @@ include:
     shield: asfoora
   - board: nice_nano_v2
     shield: wasfoora
+#  - board: nice_nano_v2
+#    shield: batreeq nice_view vik_pmw3610
   - board: nice_nano_v2
-    shield: batreeq nice_view vik_pmw3610
+    shield: batreeq nice_view
   - board: seeeduino_xiao_ble
     shield: rommana_left rgbled_widget
   - board: seeeduino_xiao_ble
