--- a/config/west.yml
+++ b/config/west.yml
@@ -6,6 +6,9 @@ manifest:
       url-base: https://github.com/petejohanson
     - name: sadekbaroudi
       url-base: https://github.com/sadekbaroudi
+    - name: zmk-pmw3610-driver
+      remote: inorichi
+      revision: main
   projects:
     - name: zmk
       remote: petejohanson
