--- a/config/boards/shields/batreeq/batreeq.conf
+++ b/config/boards/shields/batreeq/batreeq.conf
@@ -23,7 +23,10 @@ CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=20
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
 # zmk mouse emulation
+CONFIG_SPI=y
+CONFIG_INPUT=y
 CONFIG_ZMK_MOUSE=y
+CONFIG_PMW3610=y
 CONFIG_PMW3610_ORIENTATION_270=y
 CONFIG_PMW3610_INVERT_X=y
 
