--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -21,3 +21,7 @@ MACRO(grave3, &macro_tap &kp GRAVE &macro_tap &kp GRAVE &macro_tap &kp GRAVE, 0,
 
 MACRO(btblmac, &macro_tap &to HDN  &macro_tap &bt BT_SEL 1, 10, 10)
 MACRO(btblwin, &macro_tap &to HDNW &macro_tap &bt BT_SEL 0, 10, 10)
+
+#ifdef BATREEQ
+  MACRO(scroll, &macro_tap &kp K_CANCEL &macro_press &mo SCROLL &macro_pause_for_release &macro_release &mo SCROLL, 0, 0)
+#endif
