Add CPI config to Batreeq

--- a/config/boards/shields/batreeq/batreeq.conf
+++ b/config/boards/shields/batreeq/batreeq.conf
@@ -29,6 +29,9 @@ CONFIG_ZMK_MOUSE=y
 CONFIG_PMW3610=y
 CONFIG_PMW3610_ORIENTATION_270=y
 CONFIG_PMW3610_INVERT_X=y
+CONFIG_PMW3610_CPI=700
+CONFIG_PMW3610_POLLING_RATE_250=y
+CONFIG_PMW3610_FORCE_AWAKE=y
 
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
