--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -100,3 +100,13 @@ GCOMBO(switch_to_APT_win, &to APTW, 8 18 29)
 /* bluetooth profile + default layer */
 COMBO(btblhdn,  &macro_btblwin, 27 20 21, ALPHA_ALL)
 COMBO(btblhdnw, &macro_btblmac, 27 21 22, ALPHA_ALL)
+
+
+/* Batreeq trackball combos */
+#ifdef BATREEQ
+  COMBO(LCLICK, LCLK, 26 13, ALPHA_ALL)
+  COMBO(RCLICK, RCLK, 26 12, ALPHA_ALL)
+  COMBO(MCLICK, MCLK, 26 11, ALPHA_ALL)
+  COMBO(SCROLL, SL(SCROLL), 26 21, ALPHA_ALL)
+  COMBO(SNIPE , &mo SNIPE, 26 20, ALPHA_ALL)
+#endif
