comment combos out for error handling

--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -104,9 +104,9 @@ COMBO(btblhdnw, &macro_btblmac, 27 21 22, ALPHA_ALL)
 
 /* Batreeq trackball combos */
 #ifdef BATREEQ
-  COMBO(LCLICK, LCLK, 26 13, ALPHA_ALL)
-  COMBO(RCLICK, RCLK, 26 12, ALPHA_ALL)
-  COMBO(MCLICK, MCLK, 26 11, ALPHA_ALL)
-  COMBO(SCROLL, SL(SCROLL), 26 21, ALPHA_ALL)
-  COMBO(SNIPE , &mo SNIPE, 26 20, ALPHA_ALL)
+#  COMBO(LCLICK, LCLK, 26 13, ALPHA_ALL)
+#  COMBO(RCLICK, RCLK, 26 12, ALPHA_ALL)
+#  COMBO(MCLICK, MCLK, 26 11, ALPHA_ALL)
+#  COMBO(SCROLL, SL(SCROLL), 26 21, ALPHA_ALL)
+#  COMBO(SNIPE , &mo SNIPE, 26 20, ALPHA_ALL)
 #endif
