move mouse clicks combos to reach thumb

--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -103,9 +103,9 @@ COMBO(btblhdnw, &macro_btblmac, 27 21 22, ALPHA_ALL)
 
 /* GHAZAL trackball combos */
 #ifdef GHAZAL
-  COMBO(LCLICK, &mkp RCLK, 26 13, ALPHA_ALL)
-  COMBO(RCLICK, &mkp LCLK, 26 12, ALPHA_ALL)
-  COMBO(MCLICK, &mkp MCLK, 26 11, ALPHA_ALL)
+  COMBO(LCLICK, &mkp LCLK, 27 13, ALPHA_ALL)
+  COMBO(RCLICK, &mkp RCLK, 27 12, ALPHA_ALL)
+  COMBO(MCLICK, &mkp MCLK, 27 11, ALPHA_ALL)
   COMBO(SCROLL, SL(SCROLL), 27 22, ALPHA_ALL SCROLL)
   COMBO(SNIPE, &mo SNIPE, 27 21, ALPHA_ALL)
 #endif
