Add smart algorithm pmw3610 config

--- a/config/boards/shields/ghazal/ghazal.conf
+++ b/config/boards/shields/ghazal/ghazal.conf
@@ -27,6 +27,7 @@ CONFIG_SPI=y
 CONFIG_INPUT=y
 CONFIG_ZMK_MOUSE=y
 CONFIG_PMW3610=y
+CONFIG_PMW3610_SMART_ALGORITHM=y
 CONFIG_PMW3610_ORIENTATION_270=y
 CONFIG_PMW3610_INVERT_X=y
 CONFIG_PMW3610_CPI=600
