--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -103,13 +103,10 @@ COMBO(btblhdnw, &macro_btblmac, 27 21 22, ALPHA_ALL)
 
 /* GHAZAL trackball combos */
 #ifdef GHAZAL
-  COMBO(LCLICK, &mkp LCLK, 26 13, ALPHA_ALL)
-  COMBO(RCLICK, &mkp RCLK, 26 12, ALPHA_ALL)
-  COMBO(MCLICK, &mkp MCLK, 26 11, ALPHA_ALL)
-  COMBO(LCLICK2, &mkp LCLK, 12 22, ALPHA_ALL)
-  COMBO(RCLICK2, &mkp RCLK, 12 20, ALPHA_ALL)
-  COMBO(MCLICK2, &mkp MCLK, 13 21, ALPHA_ALL)
-  COMBO(MCLICK3, &mkp MCLK, 13 20, ALPHA_ALL)
-  COMBO(SCROLL, SL(SCROLL), 27 22, ALPHA_ALL SCROLL)
-  COMBO(SNIPE, &mo SNIPE, 27 21, ALPHA_ALL)
+  COMBO(LCLICK, &mkp LCLK, 12 22, ALPHA_ALL)
+  COMBO(RCLICK, &mkp RCLK, 12 20, ALPHA_ALL)
+  COMBO(MCLICK, &mkp MCLK, 13 20, ALPHA_ALL)
+  COMBO(SCROLL, SL(SCROLL), 27 13, ALPHA_ALL SCROLL)
+  COMBO(SCROLL2, SL(SCROLL), 11 22, ALPHA_ALL SCROLL)
+  COMBO(SNIPE, &mo SNIPE, 27 12, ALPHA_ALL)
 #endif
