set pmw3610 polling to 125 SW

--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -103,9 +103,9 @@ COMBO(btblhdnw, &macro_btblmac, 27 21 22, ALPHA_ALL)
 
 /* GHAZAL trackball combos */
 #ifdef GHAZAL
-  COMBO(LCLICK, &mkp LCLK, 12 22, ALPHA_ALL)
-  COMBO(RCLICK, &mkp RCLK, 12 20, ALPHA_ALL)
-  COMBO(MCLICK, &mkp MCLK, 13 20, ALPHA_ALL)
-  COMBO(SCROLL, SL(SCROLL), 11 22, ALPHA_ALL SCROLL)
-  COMBO(SNIPE, &mo SNIPE, 27 11, ALPHA_ALL)
+  COMBO(LCLICK, &mkp LCLK, 12 22, ALPHA_ALL SCROLL SNIPE)
+  COMBO(RCLICK, &mkp RCLK, 12 20, ALPHA_ALL SCROLL SNIPE)
+  COMBO(MCLICK, &mkp MCLK, 13 20, ALPHA_ALL SCROLL SNIPE)
+  COMBO(SCROLL, SL(SCROLL), 11 22, ALPHA_ALL SCROLL SNIPE)
+  COMBO(SNIPE, &mo SNIPE, 27 11, ALPHA_ALL SCROLL SNIPE)
 #endif
