add alpha combos to scroll layer.

--- a/config/combos30.dtsi
+++ b/config/combos30.dtsi
@@ -29,11 +29,11 @@ compatible = "zmk,combos";
 #define ALPHA_WIN HDNW APT
 
 /* Missing Alphas */
-COMBO(Q, &kp Q, 21 22, ALPHA_ALL) // Q 
-COMBO(Z, &kp Z, 1 2, ALPHA_ALL) // Z
-COMBO(V, &kp V, 20 21, ALPHA_ALL) // V
-COMBO(X, &kp X, 2 3, APT APTW) // X
-COMBO(DAL, &kp RBKT, 7 8, APT APTW) // ]
+COMBO(Q, &kp Q, 21 22, ALPHA_ALL SCROLL) // Q 
+COMBO(Z, &kp Z, 1 2, ALPHA_ALL SCROLL) // Z
+COMBO(V, &kp V, 20 21, ALPHA_ALL SCROLL) // V
+COMBO(X, &kp X, 2 3, APT APTW SCROLL) // X
+COMBO(DAL, &kp RBKT, 7 8, APT APTW SCROLL) // ]
 
 /* Brackets */
 COMBO(left_bracket, &kp LBKT, 1 11, ALPHA_ALL)
